Docker_K8s_Demo/Pavan Elthepu Demo/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  # namespace: nginx
spec:
  selector:
    app: nginx
  ports:
    - name: proxy
      port: 8082        #service port
      targetPort: 80        #container port
      # nodePort: 30000
    # - name: application
    #   port: 8081
    #   targetPort: 8080
